# solar_pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
sensor/: Dockerfile  requirements.txt  sensor.py  sky_generator.py
worker/: Dockerfile  consumer.py  image_processor.py  requirements.txt  tasks.py
worker/coe_sol/: SolarModel.py  __init__.py  fisheye.py  horizon.py  masking.py  utils.py
worker/coe_sol/private/: ModelKd.py  data_formatting.py
