[tool.poetry]
name = "solar-pipeline"
version = "0.1.0"
description = "Pipeline asynchrone d'irradiance solaire en milieu urbain"
authors = ["Abderrahman <Abderrahman.yousfi@coenergy.fr>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# --- Dépendances de base ---
celery = "5.3.6"
pika = "1.3.2"
numpy = "1.26.4"
opencv-python-headless = "4.9.0.80"

[tool.poetry.group.sensor.dependencies]
# On met pillow ici pour que le groupe ne soit pas vide
pillow = "^10.2.0"

[tool.poetry.group.worker.dependencies]
# --- Spécifique au Worker ---
scipy = "^1.12.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
parse = "^1.20.1"
timm = "^0.9.16"
numba = "^0.59.0"
paho-mqtt = "^2.0.0"
torch = {version = "^2.2.0", source = "pytorch-cpu"}
torchvision = {version = "^0.17.0", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"